[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Stages/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main/GameClient.gd" type="Script" id=3]

[node name="GameServer" type="Node2D"]
script = ExtResource( 3 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="create_button_pressed" from="UI" to="." method="_on_UI_create_button_pressed"]
[connection signal="login_button_pressed" from="UI" to="." method="_on_UI_login_button_pressed"]
[connection signal="stats_button_pressed" from="UI" to="." method="_on_UI_stats_button_pressed"]
